--- a/pages/index.html
+++ b/pages/index.html
@@ -9,14 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="home" id="home">
+    <section class="home" >
     <nav>
         <h2>Mustafa ALKeyam</h2>
         <ul id="nav">
-        <li><a href="home">Home</a></li>
-        <li><a href="about me">About me</a></li>
-        <li><a href="skills">Skills</a></li>
-        <li><a href="contant me">Contant me</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html ">About me</a></li>
+        <li><a href="./skils.html">Skills</a></li>
+        <li><a href="./contact.html">Contant me</a></li>
 
         </ul>
     </nav>
